--- a/index.html
+++ b/index.html
@@ -217,7 +217,32 @@
           </div>
         </a>
 
-        <!-- Card: Fashion (atenção: slug está 'Moda' com maiúscula; padronize para 'fashion' ou 'moda' lowercase) -->
+         <!-- Card: Terapias Naturais e Holísticas -->
+        <a class="experience-card" data-category="terapias" href="experience.html?slug=wellness" style="text-decoration:none;color:inherit">
+          <div class="card-image">
+            <img src="https://res.cloudinary.com/dqn2v9mtu/image/upload/v1762900622/descontos_xaef5m.jpg" alt="Terapias Naturais e Holísticas" width="400" height="267" loading="lazy">
+            <div class="card-badge">
+              <span>10% - 30% OFF</span>
+            </div>
+          </div>
+          <div class="card-content">
+            <i class="fas fa-leaf"></i>
+            <h3 data-i18n="experiences.wellnessTherapies">Wellness & Natural Therapies</h3>
+            <div class="price-section">
+              <div class="price-original">€90</div>
+              <div class="price-discount">€63</div>
+              <div class="savings"><span data-i18n="experiences.save">Save</span> €27</div>
+            </div>
+            <div class="card-actions">
+              <span class="btn btn-code" style="pointer-events:none">
+                <i class="fas fa-arrow-right"></i>
+                <span data-i18n="experiences.seeTherapies">See therapies on sale</span>
+              </span>
+            </div>
+          </div>
+        </a>
+
+        <!-- Card: Fashion -->
         <a class="experience-card featured" data-category="praia" href="experience.html?slug=moda" style="text-decoration:none;color:inherit">
           <div class="card-image">
             <img src="https://res.cloudinary.com/dqn2v9mtu/image/upload/v1759862655/IMG-20251002-WA0020_dsvvsi.jpg" alt="Moda" width="400" height="267" loading="lazy">
@@ -289,31 +314,6 @@
               <span class="btn btn-code" style="pointer-events:none">
                 <i class="fas fa-arrow-right"></i>
                 <span data-i18n="experiences.seeTours">See tours on sale</span>
-              </span>
-            </div>
-          </div>
-        </a>
-
-        <!-- Card: Terapias Naturais e Holísticas -->
-        <a class="experience-card" data-category="terapias" href="experience.html?slug=wellness" style="text-decoration:none;color:inherit">
-          <div class="card-image">
-            <img src="https://res.cloudinary.com/dqn2v9mtu/image/upload/v1762900622/descontos_xaef5m.jpg" alt="Terapias Naturais e Holísticas" width="400" height="267" loading="lazy">
-            <div class="card-badge">
-              <span>10% - 30% OFF</span>
-            </div>
-          </div>
-          <div class="card-content">
-            <i class="fas fa-leaf"></i>
-            <h3 data-i18n="experiences.wellnessTherapies">Wellness & Natural Therapies</h3>
-            <div class="price-section">
-              <div class="price-original">€90</div>
-              <div class="price-discount">€63</div>
-              <div class="savings"><span data-i18n="experiences.save">Save</span> €27</div>
-            </div>
-            <div class="card-actions">
-              <span class="btn btn-code" style="pointer-events:none">
-                <i class="fas fa-arrow-right"></i>
-                <span data-i18n="experiences.seeTherapies">See therapies on sale</span>
               </span>
             </div>
           </div>
