--- a/partner.html
+++ b/partner.html
@@ -51,7 +51,9 @@
       <div class="info-grid">
         <div class="info-card">
           <h2><i class="fas fa-map-marker-alt"></i> Localização</h2>
-          <p id="partner-location"></p>
+            <p id="partner-location">
+              <a id="partner-location-link" href="#" target="_blank"></a>
+            </p>
         </div>
         
         <div class="info-card">
