--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
           <div class="footer-logo">
             <img src="logo.png" alt="VoucherHub Logo" style="height: 4rem; width: auto;">
           </div>
-          <p data-i18n="footer.description">Exclusive coupons for the best experiences in Portugal.</p>
+          <p data-i18n="footer.description">Exclusive coupons for the best experiences in Portugal, enjoy the best, because you deserve it!</p>
           <div class="social-links">
             <a href="https://www.instagram.com/voucherhub.pt?igsh=amxlbjN0cWhpNzho" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
           </div>
@@ -400,9 +400,9 @@
             <h4 data-i18n="footer.support">Support</h4>
             <ul>
               <li><a href="#como-funciona" data-i18n="footer.howItWorks">How It Works</a></li>
-              <li><a href="#" data-i18n="footer.faq">FAQ</a></li>
-              <li><a href="#" data-i18n="footer.contact">Contact</a></li>
-              <li><a href="#" data-i18n="footer.terms">Terms and conditions</a></li>
+              <li><a href="#FAQ" data-i18n="footer.faq">FAQ</a></li>
+              <li><a href="#Contato" data-i18n="footer.contact">Contact</a></li>
+              <li><a href="#Termos de Uso" data-i18n="footer.terms">Terms and conditions</a></li>
             </ul>
           </div>
         </div>
@@ -410,7 +410,6 @@
       <div class="footer-bottom">
         <div class="footer-text">
           <p>&copy; 2025 VoucherHub. <span data-i18n="footer.copyright">All rights reserved.</span></p>
-          <p data-i18n="footer.disclaimer">Promotional codes are valid only on official partner websites.</p>
         </div>
       </div>
     </div>
