--- a/partner.html
+++ b/partner.html
@@ -94,7 +94,5 @@
   <script>window.VOUCHERHUB_API = "https://voucherhub-backend-production.up.railway.app";</script>
   <script src="i18n.js" defer></script>
   <script src="script.js" defer></script>
-  <script src="partner.js" defer></script>
-  <script src="buy.js" defer></script>
-</body>
+  <script src="partner.js" defer></script></body>
 </html>
