--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           </div>
           <div class="card-content">
             <i class="fas fa-car"></i>
-            <h3 data-i18n="experiences.driverGuide">Tour com Guia e Motorista</h3>
+            <h3 data-i18n="experiences.driverGuide">Passeios com Guia e Motorista</h3>
             <div class="price-section">
               <div class="price-original">€30</div>
               <div class="price-discount">€24</div>
@@ -339,7 +339,7 @@
           </div>
           <div class="card-content">
             <i class="fas fa-bicycle"></i>
-            <h3 data-i18n="experiences.bikeTour">Passeio de Bicicleta</h3>
+            <h3 data-i18n="experiences.bikeTour">Passeios de Bicicleta</h3>
             <div class="price-section">
               <div class="price-original">€50</div>
               <div class="price-discount">€45</div>
