--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
     gtag('config', 'G-8PZ7RNGLVL');
   </script>
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "VoucherHub",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.8",
+    "reviewCount": "150"
+  }
+}
+</script>
+
 </head>
 
 
@@ -285,6 +298,29 @@
           </div>
         </a>
 
+        <!-- 🚴‍♂️ NOVO CARD: Bike Tour -->
+        <a class="experience-card" data-category="bike" href="experience.html?slug=bike" style="text-decoration:none;color:inherit">
+          <div class="card-image">
+            <img src="https://images.pexels.com/photos/289869/pexels-photo-289869.jpeg" alt="Bike Tour Lisboa" width="400" height="267" loading="lazy">
+            <div class="card-badge"><span>10% - 30% OFF</span></div>
+          </div>
+          <div class="card-content">
+            <i class="fas fa-bicycle"></i>
+            <h3 data-i18n="experiences.bikeTour">Passeios de Bicicleta</h3>
+            <div class="price-section">
+              <div class="price-original">€95</div>
+              <div class="price-discount">€66,5</div>
+              <div class="savings">Poupe €28,5</div>
+            </div>
+            <div class="card-actions">
+              <span class="btn btn-code" style="pointer-events:none">
+                <i class="fas fa-arrow-right"></i>
+                <span data-i18n="experiences.seeTour">Ver passeios com desconto</span>
+              </span>
+            </div>
+          </div>
+        </a>
+
         <!-- Card: Kitesurf -->
         <a class="experience-card featured" data-category="praia" href="experience.html?slug=kitesurf" style="text-decoration:none;color:inherit">
           <div class="card-image">
@@ -321,29 +357,6 @@
               <div class="price-original">€55</div>
               <div class="price-discount">€44</div>
               <div class="savings"><span data-i18n="experiences.save">Poupe</span> €11</div>
-            </div>
-            <div class="card-actions">
-              <span class="btn btn-code" style="pointer-events:none">
-                <i class="fas fa-arrow-right"></i>
-                <span data-i18n="experiences.seeTour">Ver passeios com desconto</span>
-              </span>
-            </div>
-          </div>
-        </a>
-
-        <!-- 🚴‍♂️ NOVO CARD: Bike Tour -->
-        <a class="experience-card" data-category="bike" href="experience.html?slug=bike" style="text-decoration:none;color:inherit">
-          <div class="card-image">
-            <img src="https://images.pexels.com/photos/289869/pexels-photo-289869.jpeg" alt="Bike Tour Lisboa" width="400" height="267" loading="lazy">
-            <div class="card-badge"><span>10% - 30% OFF</span></div>
-          </div>
-          <div class="card-content">
-            <i class="fas fa-bicycle"></i>
-            <h3 data-i18n="experiences.bikeTour">Passeios de Bicicleta</h3>
-            <div class="price-section">
-              <div class="price-original">€50</div>
-              <div class="price-discount">€45</div>
-              <div class="savings">Poupe €5</div>
             </div>
             <div class="card-actions">
               <span class="btn btn-code" style="pointer-events:none">
@@ -401,7 +414,10 @@
         </div>
         <h3 data-i18n="howItWorks.step3Title">Use & Enjoy</h3>
         <p data-i18n="howItWorks.step3Text">
-          Receive your voucher by e-mail and show it to the partner. They validate it online and you enjoy the experience!
+          Your voucher will be sent to your email address immediately.
+          Contact the partner to arrange details such as available dates, times, and locations.
+          Present it at the location to be validated and enjoy your experience!
+          More information will be sent by email.
         </p>
       </div>
 
@@ -510,7 +526,8 @@
     Basta apresentá-lo ao parceiro no dia da experiência. Ele valida o voucher online no sistema VoucherHub.</p>
 
     <p><strong>3. Posso pedir reembolso?</strong><br>
-    As políticas de reembolso variam consoante o parceiro. Consulte diretamente o parceiro para mais informações.</p>
+    Nos termos do Decreto-Lei n.º 24/2014, o consumidor dispõe de um prazo de 14 dias para exercer o direito de livre resolução, sem necessidade de indicar qualquer motivo.
+    Este prazo conta a partir da data da compra do voucher e antes no mesmo ser validado pelo parceiro.</p>
   `;
 
   const contentContact = `
