--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 }
 </script>
 
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="5aae3549-1c61-42e1-93dd-9b7f82a3c3da" data-blockingmode="auto" type="text/javascript"></script>
+
 </head>
 
 
