--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
   <link rel="stylesheet" href="style.css">
   
-  <link rel="preload" href="i18n-styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="i18n-styles.css"></noscript>
   
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -89,7 +88,7 @@
 }
 </script>
 
-<!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="5aae3549-1c61-42e1-93dd-9b7f82a3c3da" data-blockingmode="auto" type="text/javascript"></script>-->
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="5aae3549-1c61-42e1-93dd-9b7f82a3c3da" data-blockingmode="auto" type="text/javascript"></script>
 
 
 </head>
