--- a/index.html
+++ b/index.html
@@ -91,12 +91,6 @@
 }
 </script>
 
-<!--<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js"
-data-cbid="5aae3549-1c61-42e1-93dd-9b7f82a3c3da"
-data-blockingmode="manual"
-type="text/javascript"></script>
--->
-
 
 </head>
 
@@ -492,7 +486,7 @@ type="text/javascript"></script>
        NOTE: experience.js é carregado apenas na página experience.html
   -->
   <script src="i18n.js" defer></script>
-  <script src="script.js" defer></script>
+  <script src="script.js" ></script>
   
   <script>
   const modalOverlay = document.getElementById("modal-overlay");
