--- a/index.html
+++ b/index.html
@@ -96,6 +96,25 @@
 
 
 <body>
+<div id="test-mode-banner" style="
+    background: #ff4444;
+    color: white;
+    padding: 15px 20px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    border-bottom: 3px solid #cc0000;
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+">
+    ⚠️ O site está em <b>MODO DE TESTE</b>.  
+    <span style="font-weight: normal;">As compras estão temporariamente desativadas.</span>
+</div>
+
+
+
 
 <!-- garante que o conteúdo não fique escondido -->
 <style> body { margin-top: 40px; } </style>
