--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
       </a>
       <div class="nav-badge">
         <i class="fas fa-fire"></i>
-        <span data-i18n="nav.badge">Ofertas por Tempo Limitado</span>
+        <span data-i18n="partnerPage.navBadge">Ofertas em Destaque</span>
       </div>
+
     </div>
   </nav>
 
