--- a/experience.html
+++ b/experience.html
@@ -58,7 +58,7 @@
     <!-- CONTEÚDO PRINCIPAL -->
     <main itemscope itemtype="https://schema.org/OfferCatalog">
       <!-- Cabeçalho da página -->
-      <section class="hero" style="min-height: 40vh">
+      <section class="hero-inner" style="min-height: 40vh">
         <div class="hero-background"></div>
         <div class="hero-content">
           <div class="hero-badge" id="mode-badge">
