--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
 
 
 </head>
-
-
 <body>
-<div id="test-mode-banner" style="
+
+<!--
+  
+  <div id="test-mode-banner" style="
     background: #ff4444;
     color: white;
     padding: 15px 20px;
@@ -111,7 +112,7 @@
 ">
     ⚠️ O site está em <b>MODO DE TESTE</b>.  
     <span style="font-weight: normal;">As compras estão temporariamente desativadas.</span>
-</div>
+</div>-->
 
 
 
