--- a/partner.html
+++ b/partner.html
@@ -88,6 +88,15 @@
           <div id="partner-gallery"></div>
         </div>
 
+        <div id="includes-section" class="info-card" style="display:none;">
+          <h2>
+            <i class="fas fa-check-circle"></i>
+            O que está incluído
+          </h2>
+
+          <ul id="includes-list" class="includes-list"></ul>
+        </div>
+
         <div class="info-card">
           <h2><i class="fas fa-book-open"></i> Sobre Nós</h2>
           <p id="partner-story-short"></p>
