--- a/index.html
+++ b/index.html
@@ -381,6 +381,29 @@
           </div>
         </a>
 
+        <!-- Card: Tour Aquático -->
+        <a class="experience-card" data-category="aventura" href="experience.html?slug=tour-aquatico" style="text-decoration:none;color:inherit">
+          <div class="card-image">
+            <img src="https://images.pexels.com/photos/5368722/pexels-photo-5368722.jpeg" alt="Tour Aquático" width="400" height="267" loading="lazy">
+            <div class="card-badge"><span>10% - 30% OFF</span></div>
+          </div>
+          <div class="card-content">
+            <i class="fas fa-ship"></i>
+            <h3 data-i18n="experiences.aquaticTour">Tour Aquático</h3>
+            <div class="price-section">
+              <div class="price-original">€300</div>
+              <div class="price-discount">€270</div>
+              <div class="savings"><span data-i18n="experiences.save">Poupe</span> €30</div>
+            </div>
+            <div class="card-actions">
+              <span class="btn btn-code" style="pointer-events:none">
+                <i class="fas fa-arrow-right"></i>
+                <span data-i18n="experiences.seeTour">Ver passeios com desconto</span>
+              </span>
+            </div>
+          </div>
+        </a>
+
       </div>
     </div>
   </section>
