--- a/index.html
+++ b/index.html
@@ -37,30 +37,30 @@
   <link rel="canonical" href="https://modest-comfort-production.up.railway.app/">
 
   <!-- PT-PT FIX PARA INTERNACIONALIZAÇÃO -->
-  <link rel="alternate" hreflang="en" href="https://yourdomain.com/" />
-  <link rel="alternate" hreflang="pt" href="https://yourdomain.com/pt/" />
-  <link rel="alternate" hreflang="x-default" href="https://yourdomain.com/" />
+  <link rel="alternate" hreflang="en" href="https://voucherhub.pt/" />
+  <link rel="alternate" hreflang="pt" href="https://voucherhub.pt/pt/" />
+  <link rel="alternate" hreflang="x-default" href="https://voucherhub.pt/" />
 
   <meta property="og:title" content="VoucherHub – Descontos Exclusivos em Portugal">
   <meta property="og:description" content="Poupe em aulas de surf, tours, restaurantes, yoga e outras atividades com códigos promocionais verificados.">
-  <meta property="og:image" content="https://yourdomain.com/og-image.jpg">
-  <meta property="og:url" content="https://yourdomain.com/">
+  <meta property="og:image" content="https://voucherhub.pt/og-image.jpg">
+  <meta property="og:url" content="https://voucherhub.pt/">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="VoucherHub – Descontos Exclusivos em Portugal">
   <meta name="twitter:description" content="Promoções e códigos de desconto para experiências nas regiões de Lisboa e arredores.">
-  <meta name="twitter:image" content="https://yourdomain.com/og-image.jpg">
+  <meta name="twitter:image" content="https://voucherhub.pt/og-image.jpg">
   
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "VoucherHub",
-    "url": "https://yourdomain.com/",
+    "url": "https://voucherhub.pt/",
     "potentialAction": {
       "@type": "SearchAction",
-      "target": "https://yourdomain.com/?q={search_term_string}",
+      "target": "https://voucherhub.pt/?q={search_term_string}",
       "query-input": "required name=search_term_string"
     }
   }
