--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" href="favcon.png">
 
   <!-- PT-PT FIX -->
-  <meta name="description" content="VoucherHub – Descubra as melhores experiências em Portugal com descontos exclusivos. Poupe em escolas de surf, tours, yoga, restaurantes e muito mais em Lisboa e arredores.">
+  <meta name="description" content="VoucherHub: Os melhores vouchers e descontos exclusivos em Portugal. Poupe em surf, yoga, tours e experiências únicas em Lisboa e arredores. Aproveite já!">
 
   <meta name="keywords" content="
     descontos portugal, cupões portugal, promoções lisboa, descontos surf portugal,
@@ -34,7 +34,7 @@
 
   <meta name="author" content="VoucherHub">
 
-  <link rel="canonical" href="https://modest-comfort-production.up.railway.app/">
+  <link rel="canonical" href="https://voucherhub.pt/">
 
   <!-- PT-PT FIX PARA INTERNACIONALIZAÇÃO -->
   <link rel="alternate" hreflang="en" href="https://voucherhub.pt/" />
@@ -524,8 +524,7 @@
        script.js: lógica global da UI
        NOTE: experience.js é carregado apenas na página experience.html
   -->
-  <script src="i18n.js" defer></script>
-  <script src="script.js" ></script>
+  
   
   <script>
   const modalOverlay = document.getElementById("modal-overlay");
@@ -600,7 +599,7 @@
         </button>
     </div>
 </div>
-
-  
+<script src="i18n.js" defer></script>
+<script src="script.js" defender></script>
 </body>
 </html>
