--- a/partner/onboarding-refresh.html
+++ b/partner/onboarding-refresh.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Carregar Novo Link...</title>
+    <link rel="canonical" href="https://voucherhub.pt/url-da-pagina" /><div class="00">0
+    </div>
     <link rel="stylesheet" href="../style.css"> <style>
         .loading-page { 
             display: flex; 
