--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
   <meta name="twitter:title" content="VoucherHub – Descontos Exclusivos em Portugal">
   <meta name="twitter:description" content="Promoções e códigos de desconto para experiências nas regiões de Lisboa e arredores.">
   <meta name="twitter:image" content="https://voucherhub.pt/og-image.jpg">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
   
   <script type="application/ld+json">
   {
