--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       
       <div class="search-wrapper">
         <div class="search-container">
-            <input type="text" id="global-search-input" placeholder="Pesquise pela melhor experiencia..." />
+            <input type="text" id="global-search-input" placeholder="Encontre a melhor experiencia..." />
             <button id="global-search-btn"><i class="fas fa-search"></i></button>
         </div>
         <div id="global-search-results" class="search-results-overlay" style="display: none;">
