--- a/admin-painel.html
+++ b/admin-painel.html
@@ -13,6 +13,8 @@
         button:hover { background: #5469d4; }
         .result { margin-top: 20px; padding: 15px; background: #e7f3ff; border: 1px solid #b2d7ff; border-radius: 4px; display: none; word-break: break-all; }
     </style>
+    <link rel="canonical" href="https://voucherhub.pt/" />
+
 </head>
 <body>
     <h2>🚀 Gerador de Parceiros</h2>
