--- a/experience.html
+++ b/experience.html
@@ -39,6 +39,8 @@
       gtag("js", new Date());
       gtag("config", "G-8PZ7RNGLVL");
     </script>
+    <link rel="canonical" href="https://voucherhub.pt/" />
+
   </head>
 
   <body>
