--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <meta name="author" content="VoucherHub">
 
-  <link rel="canonical" href="https://voucherhub.pt/">
+ <link rel="canonical" href="https://voucherhub.pt/" />
 
   <!-- PT-PT FIX PARA INTERNACIONALIZAÇÃO -->
   <link rel="alternate" hreflang="en" href="https://voucherhub.pt/" />
