--- a/partner/onboarding-refresh.html
+++ b/partner/onboarding-refresh.html
@@ -7,6 +7,7 @@
     <link rel="canonical" href="https://voucherhub.pt/url-da-pagina" /><div class="00">0
     </div>
     <link rel="stylesheet" href="../style.css"> <style>
+        
         .loading-page { 
             display: flex; 
             flex-direction: column; 
@@ -28,6 +29,8 @@
         h1 { font-size: 20px; color: #333; }
         p { color: #666; }
     </style>
+    <link rel="canonical" href="https://voucherhub.pt/" />
+
 </head>
 <body>
 
