--- a/connect-success.html
+++ b/connect-success.html
@@ -48,6 +48,8 @@
             background-color: #5a67d8;
         }
     </style>
+    <link rel="canonical" href="https://voucherhub.pt/" />
+
 </head>
 <body>
 
