--- a/partner.html
+++ b/partner.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="favcon.png">
+  <link rel="canonical" href="https://voucherhub.pt/" />
+
 </head>
 <body>
   <nav class="navbar glassy">
