--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-PT">
 <head>
   <!-- Cabeçalho (head)
        Contém: meta charset, viewport, título da página, links para CSS, fontes, ícones,
@@ -423,6 +423,39 @@
       </div>
     </div>
   </section>
+
+  <section class="value-section">
+  <div class="container">
+    <div class="value-grid">
+      
+      <div class="value-text">
+        <h2>
+          Experiências selecionadas com
+          <span class="highlight-orange">vantagens exclusivas</span>
+        </h2>
+
+        <p>
+          O <strong>VoucherHub</strong> seleciona experiências de qualidade em
+          Portugal e negoceia diretamente com parceiros locais para oferecer
+          <strong>condições especiais</strong> e <strong>preços reduzidos</strong>.
+        </p>
+
+        <p>
+          Aqui encontra aulas de surf, estúdios de yoga, passeios turísticos,
+          experiências de bem-estar e aventura — sempre com
+          <strong>descontos reais</strong> e sem custos escondidos.
+        </p>
+
+        <p>
+          O processo é simples: escolha a experiência, receba o voucher por
+          email e apresente-o diretamente no parceiro. Assim, pode aproveitar
+          mais e <strong>pagar menos</strong>, com total confiança.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 
   <!-- How it works: passo a passo -->
