--- a/experience.html
+++ b/experience.html
@@ -23,7 +23,7 @@
     <!-- SEO Base (será atualizado dinamicamente pelo experience.js) -->
     <meta
       name="description"
-      content="Find partner schools and tour operators in Portugal with exclusive coupon codes."
+      content="Find partner schools and tour operators in Lisbonwith exclusive coupon codes."
     />
     <link rel="canonical" href="https://modest-comfort-production.up.railway.app" />
     <link rel="alternate" hreflang="en" href="https://yourdomain.com/experience" />
