--- a/index.html
+++ b/index.html
@@ -285,12 +285,12 @@
         <!-- Card: Terapias Naturais -->
         <a class="experience-card" data-category="terapias" href="experience.html?slug=wellness" style="text-decoration:none;color:inherit">
           <div class="card-image">
-            <img src="https://res.cloudinary.com/dqn2v9mtu/image/upload/v1762900622/descontos_xaef5m.jpg" alt="Terapias Naturais e Holísticas" width="400" height="267" loading="lazy">
+            <img src="https://images.pexels.com/photos/3757942/pexels-photo-3757942.jpeg" alt="Saude & Bem-estar" width="400" height="267" loading="lazy">
             <div class="card-badge"><span>10% - 30% OFF</span></div>
           </div>
           <div class="card-content">
             <i class="fas fa-leaf"></i>
-            <h3 data-i18n="experiences.wellnessTherapies">Terapias Naturais e Holísticas</h3>
+            <h3 data-i18n="experiences.wellnessTherapies">Saude & Bem-estar</h3>
             <div class="price-section">
               <div class="price-original">€90</div>
               <div class="price-discount">€63</div>
